--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
 #  jackson:
 #    serialization:
 #      fail-on-empty-beans: false
+#  jackson:
+#    serialization:
+#      indent_output: true
 
   datasource:
 #    initialization-mode: always
